--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "toastr": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
